--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -12,13 +12,14 @@
         Background="DarkGray"
         ResizeMode="CanResize"
         WindowStartupLocation="CenterScreen" 
+        KeyDown="OnKeyDownHandler"
                 Topmost="True">
 
     <Grid Background="Black" MinHeight="340" VerticalAlignment="Stretch" Opacity="0.75" Margin="0,0,0,0">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="4*"/>
             <ColumnDefinition Width="1*"/>
-            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="4*"/>
         </Grid.ColumnDefinitions>
         <Grid>
             <Grid.RowDefinitions>
@@ -44,8 +45,12 @@
                     </TextBox>
                 </Grid>
                 <Grid Grid.Row="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="197*"/>
+                        <ColumnDefinition Width="92*"/>
+                    </Grid.ColumnDefinitions>
                     <!-- Result -->
-                    <TextBox TextWrapping="Wrap" BorderThickness="0" Margin="2,0,2,2" FontSize="20" Background="Black" Opacity="1" Name="textr" Text="" TextChanged="textr_TextChanged" Focusable="False">
+                    <TextBox TextWrapping="Wrap" BorderThickness="0" Margin="2,0,2,2" FontSize="20" Background="Black" Opacity="1" Name="textr" Text="" TextChanged="textr_TextChanged" Focusable="False" Grid.ColumnSpan="2">
                         <TextBox.Foreground>
                             <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.WindowColorKey}}" />
                         </TextBox.Foreground>
@@ -329,10 +334,10 @@
 
         </Grid>
 
-        <ListBox HorizontalAlignment="Left" Margin="24,63,0,10" VerticalAlignment="Stretch" Name="Listbhisto" Width="206" Grid.Column="2" />
+        <ListBox HorizontalAlignment="Center" Margin="24,63,0,10" VerticalAlignment="Stretch" Name="Listbhisto" Width="254" Grid.Column="2" />
         <Label Content="HISTORY :" HorizontalAlignment="Center" Height="38" Margin="24,20,35,0" VerticalAlignment="Top" Width="206" Foreground="Red" FontWeight="Bold" Grid.Column="2"/>
 
-        <Button Content="CLEAR" HorizontalAlignment="Left" Margin="151,38,0,0" VerticalAlignment="Top" Width="76" RenderTransformOrigin="0.44,-0.825" Grid.Column="2" Height="20">
+        <Button Content="CLEAR" HorizontalAlignment="Right" Margin="151,38,5,0" VerticalAlignment="Top" Width="76" RenderTransformOrigin="0.44,-0.825" Grid.Column="2" Height="20">
             <Button.Foreground>
                 <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.WindowColorKey}}"/>
             </Button.Foreground>
