--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -7,7 +7,8 @@
         mc:Ignorable="d"
         Title="Calculatrice"
         Height="414" 
-        MinHeight="370"
+        MinHeight="400"
+        MinWidth="570"
         Width="657" 
         Background="DarkGray"
         ResizeMode="CanResize"
